# COSC-490-360

./: .copy_ignore  .gitignore  Pipfile  README.md  experiment_results.csv  job.sh  pyproject.toml  run_on_aoraki.sh  setup.sh
code/: 360.py  STMaps.py  VideoWriter.py  distortVideo.py  helpers.py  remap.py  remapping360.py  video.py
example_input/: camera_information.json  inertials.csv
input/: bscr1.csv  bscr2.csv  bscr3.csv  bscr4.csv  bscr5.csv
scripts/: add_spherical_metadata.py  analyze_synthetic_results.py  count_nonblack_pixels.py  distort_video.py  extract_angles_segment.py  extract_frame.py  extract_video_segment.py  loop_closure_visualisation.py  process_360.sh  process_angles.sh  relative_rotation_checker.py  run_experiments.py  undistort_frame.py
src/: 360.py  DataManager.py  FeatureDetector.py  FeatureManager.py  KeypointsManager.py  ObservationManager.py  STMaps.py  VideoTo360.py  VideoWriter.py  angle_estimation.py  angle_estimation_helpers.py  helpers.py  horizon_detection.py  new.py  orientation_estimation.py  remap.py  remap_360.py  remapping360.py  tests.py  undistort.py  video_writer.py
